build/c_compiler.output
Nonterminals useless in grammar

   enum_specifier
   enumerator_list
   enumerator


Terminals unused in grammar

   ERROR_tok


Rules useless in grammar

  225 enum_specifier: ENUM_tok OPEN_BRACE_tok enumerator_list CLOSE_BRACE_tok
  226               | ENUM_tok identifier OPEN_BRACE_tok enumerator_list CLOSE_BRACE_tok
  227               | ENUM_tok identifier

  228 enumerator_list: enumerator
  229                | enumerator_list COMMA_tok enumerator

  230 enumerator: identifier
  231           | identifier EQUAL_tok constant_expression


State 2 conflicts: 20 shift/reduce
State 4 conflicts: 20 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 $@1: %empty

    2 translation_unit: $@1 external_declaration

    3 $@2: %empty

    4 translation_unit: translation_unit $@2 external_declaration

    5 $@3: %empty

    6 external_declaration: $@3 function_definition
    7                     | declaration

    8 function_definition: declarator compound_statement

    9 $@4: %empty

   10 function_definition: declarator declaration_list $@4 compound_statement
   11                    | declaration_specifiers declarator compound_statement

   12 $@5: %empty

   13 function_definition: declaration_specifiers declarator declaration_list $@5 compound_statement

   14 declaration: declaration_specifiers SEMI_tok
   15            | declaration_specifiers init_declarator_list SEMI_tok

   16 $@6: %empty

   17 declaration_list: $@6 declaration

   18 $@7: %empty

   19 declaration_list: declaration_list $@7 declaration

   20 declaration_specifiers: storage_class_specifier
   21                       | storage_class_specifier declaration_specifiers
   22                       | type_specifier
   23                       | type_specifier declaration_specifiers
   24                       | type_qualifier
   25                       | type_qualifier declaration_specifiers

   26 storage_class_specifier: AUTO_tok
   27                        | REGISTER_tok
   28                        | STATIC_tok
   29                        | EXTERN_tok
   30                        | TYPEDEF_tok

   31 type_specifier: VOID_tok
   32               | CHAR_tok
   33               | SHORT_tok
   34               | INT_tok
   35               | LONG_tok
   36               | FLOAT_tok
   37               | DOUBLE_tok
   38               | SIGNED_tok
   39               | UNSIGNED_tok
   40               | struct_or_union_specifier
   41               | ENUM_tok
   42               | TYPEDEF_NAME_tok

   43 type_qualifier: CONST_tok
   44               | VOLATILE_tok

   45 struct_or_union_specifier: struct_or_union identifier OPEN_BRACE_tok struct_declaration_list CLOSE_BRACE_tok
   46                          | struct_or_union OPEN_BRACE_tok struct_declaration_list CLOSE_BRACE_tok
   47                          | struct_or_union identifier

   48 struct_or_union: STRUCT_tok
   49                | UNION_tok

   50 struct_declaration_list: struct_declaration
   51                        | struct_declaration_list struct_declaration

   52 init_declarator_list: init_declarator
   53                     | init_declarator_list COMMA_tok init_declarator

   54 init_declarator: declarator
   55                | declarator EQUAL_tok initializer

   56 struct_declaration: specifier_qualifier_list struct_declarator_list SEMI_tok

   57 specifier_qualifier_list: type_specifier
   58                         | type_specifier specifier_qualifier_list
   59                         | type_qualifier
   60                         | type_qualifier specifier_qualifier_list

   61 struct_declarator_list: struct_declarator
   62                       | struct_declarator_list COMMA_tok struct_declarator

   63 struct_declarator: declarator
   64                  | COLON_tok constant_expression
   65                  | declarator COLON_tok constant_expression

   66 declarator: direct_declarator
   67           | pointer direct_declarator

   68 direct_declarator: identifier
   69                  | OPEN_PAREN_tok declarator CLOSE_PAREN_tok
   70                  | direct_declarator OPEN_BRACKET_tok CLOSE_BRACKET_tok
   71                  | direct_declarator OPEN_BRACKET_tok constant_expression CLOSE_BRACKET_tok
   72                  | direct_declarator OPEN_PAREN_tok CLOSE_PAREN_tok
   73                  | direct_declarator OPEN_PAREN_tok parameter_type_list CLOSE_PAREN_tok
   74                  | direct_declarator OPEN_PAREN_tok identifier_list CLOSE_PAREN_tok

   75 pointer: STAR_tok
   76        | STAR_tok type_qualifier_list
   77        | STAR_tok pointer
   78        | STAR_tok type_qualifier_list pointer

   79 type_qualifier_list: type_qualifier
   80                    | type_qualifier_list type_qualifier

   81 parameter_type_list: parameter_list
   82                    | parameter_list COMMA_tok ELIPSIS_tok

   83 parameter_list: parameter_declaration
   84               | parameter_list COMMA_tok parameter_declaration

   85 parameter_declaration: declaration_specifiers declarator
   86                      | declaration_specifiers
   87                      | declaration_specifiers abstract_declarator

   88 identifier_list: identifier
   89                | identifier_list COMMA_tok identifier

   90 initializer: assignment_expression
   91            | OPEN_BRACE_tok initializer_list CLOSE_BRACE_tok
   92            | OPEN_BRACE_tok initializer_list COMMA_tok CLOSE_BRACE_tok

   93 initializer_list: initializer
   94                 | initializer_list COMMA_tok initializer

   95 type_name: specifier_qualifier_list
   96          | specifier_qualifier_list abstract_declarator

   97 abstract_declarator: pointer
   98                    | direct_abstract_declarator
   99                    | pointer direct_abstract_declarator

  100 direct_abstract_declarator: OPEN_PAREN_tok abstract_declarator CLOSE_PAREN_tok
  101                           | OPEN_BRACKET_tok CLOSE_BRACKET_tok
  102                           | OPEN_BRACKET_tok constant_expression CLOSE_BRACKET_tok
  103                           | direct_abstract_declarator OPEN_BRACKET_tok CLOSE_BRACKET_tok
  104                           | direct_abstract_declarator OPEN_BRACKET_tok constant_expression CLOSE_BRACKET_tok
  105                           | OPEN_PAREN_tok CLOSE_PAREN_tok
  106                           | OPEN_PAREN_tok parameter_type_list CLOSE_PAREN_tok
  107                           | direct_abstract_declarator OPEN_PAREN_tok CLOSE_PAREN_tok
  108                           | direct_abstract_declarator OPEN_PAREN_tok parameter_type_list CLOSE_PAREN_tok

  109 statement: labeled_statement
  110          | compound_statement
  111          | expression_statement
  112          | selection_statement
  113          | iteration_statement
  114          | jump_statement

  115 labeled_statement: identifier COLON_tok statement
  116                  | CASE_tok constant_expression COLON_tok statement
  117                  | DEFAULT_tok COLON_tok statement

  118 expression_statement: SEMI_tok
  119                     | expression SEMI_tok

  120 compound_statement: OPEN_BRACE_tok CLOSE_BRACE_tok
  121                   | OPEN_BRACE_tok statement_list CLOSE_BRACE_tok
  122                   | OPEN_BRACE_tok declaration_list CLOSE_BRACE_tok
  123                   | OPEN_BRACE_tok declaration_list statement_list CLOSE_BRACE_tok

  124 statement_list: statement
  125               | statement_list statement

  126 selection_statement: IF_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok statement
  127                    | IF_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok statement ELSE_tok statement
  128                    | SWITCH_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok statement

  129 iteration_statement: WHILE_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok statement
  130                    | DO_tok statement WHILE_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok SEMI_tok
  131                    | FOR_tok OPEN_PAREN_tok SEMI_tok SEMI_tok CLOSE_PAREN_tok statement
  132                    | FOR_tok OPEN_PAREN_tok SEMI_tok SEMI_tok expression CLOSE_PAREN_tok statement
  133                    | FOR_tok OPEN_PAREN_tok SEMI_tok expression SEMI_tok CLOSE_PAREN_tok statement
  134                    | FOR_tok OPEN_PAREN_tok SEMI_tok expression SEMI_tok expression CLOSE_PAREN_tok statement
  135                    | FOR_tok OPEN_PAREN_tok expression SEMI_tok SEMI_tok CLOSE_PAREN_tok statement
  136                    | FOR_tok OPEN_PAREN_tok expression SEMI_tok SEMI_tok expression CLOSE_PAREN_tok statement
  137                    | FOR_tok OPEN_PAREN_tok expression SEMI_tok expression SEMI_tok CLOSE_PAREN_tok statement
  138                    | FOR_tok OPEN_PAREN_tok expression SEMI_tok expression SEMI_tok expression CLOSE_PAREN_tok statement

  139 @8: %empty

  140 jump_statement: GOTO_tok @8 identifier SEMI_tok
  141               | CONTINUE_tok SEMI_tok
  142               | BREAK_tok SEMI_tok
  143               | RETURN_tok SEMI_tok
  144               | RETURN_tok expression SEMI_tok

  145 expression: assignment_expression
  146           | expression COMMA_tok assignment_expression

  147 assignment_expression: conditional_expression
  148                      | unary_expression assignment_operator assignment_expression

  149 assignment_operator: EQUAL_tok
  150                    | MULT_ASSIGN_tok
  151                    | DIV_ASSIGN_tok
  152                    | MOD_ASSIGN_tok
  153                    | ADD_ASSIGN_tok
  154                    | SUB_ASSIGN_tok
  155                    | LEFT_ASSIGN_tok
  156                    | RIGHT_ASSIGN_tok
  157                    | AND_ASSIGN_tok
  158                    | XOR_ASSIGN_tok
  159                    | OR_ASSIGN_tok

  160 conditional_expression: logical_or_expression
  161                       | logical_or_expression QUESTION_MARK_tok expression COLON_tok conditional_expression

  162 constant_expression: conditional_expression

  163 logical_or_expression: logical_and_expression
  164                      | logical_or_expression OR_OP_tok logical_and_expression

  165 logical_and_expression: inclusive_or_expression
  166                       | logical_and_expression AND_OP_tok inclusive_or_expression

  167 inclusive_or_expression: exclusive_or_expression
  168                        | inclusive_or_expression BAR_tok exclusive_or_expression

  169 exclusive_or_expression: and_expression
  170                        | exclusive_or_expression CARET_tok and_expression

  171 and_expression: equality_expression
  172               | and_expression AMP_tok equality_expression

  173 equality_expression: relational_expression
  174                    | equality_expression EQ_OP_tok relational_expression
  175                    | equality_expression NE_OP_tok relational_expression

  176 relational_expression: shift_expression
  177                      | relational_expression LT_tok shift_expression
  178                      | relational_expression GT_tok shift_expression
  179                      | relational_expression LE_OP_tok shift_expression
  180                      | relational_expression GE_OP_tok shift_expression

  181 shift_expression: additive_expression
  182                 | shift_expression LEFT_OP_tok additive_expression
  183                 | shift_expression RIGHT_OP_tok additive_expression

  184 additive_expression: multiplicative_expression
  185                    | additive_expression PLUS_tok multiplicative_expression
  186                    | additive_expression MINUS_tok multiplicative_expression

  187 multiplicative_expression: cast_expression
  188                          | multiplicative_expression STAR_tok cast_expression
  189                          | multiplicative_expression DIV_tok cast_expression
  190                          | multiplicative_expression PERCENT_tok cast_expression

  191 cast_expression: unary_expression
  192                | OPEN_PAREN_tok type_name CLOSE_PAREN_tok cast_expression

  193 unary_expression: postfix_expression
  194                 | INC_OP_tok unary_expression
  195                 | DEC_OP_tok unary_expression
  196                 | unary_operator cast_expression
  197                 | SIZEOF_tok unary_expression
  198                 | SIZEOF_tok OPEN_PAREN_tok type_name CLOSE_PAREN_tok

  199 unary_operator: AMP_tok
  200               | STAR_tok
  201               | PLUS_tok
  202               | MINUS_tok
  203               | TILDA_tok
  204               | NOT_tok

  205 postfix_expression: primary_expression
  206                   | postfix_expression OPEN_BRACKET_tok expression CLOSE_BRACKET_tok
  207                   | postfix_expression OPEN_PAREN_tok CLOSE_PAREN_tok
  208                   | postfix_expression OPEN_PAREN_tok argument_expression_list CLOSE_PAREN_tok
  209                   | postfix_expression PERIOD_tok identifier
  210                   | postfix_expression PTR_OP_tok identifier
  211                   | postfix_expression INC_OP_tok
  212                   | postfix_expression DEC_OP_tok

  213 primary_expression: identifier
  214                   | constant
  215                   | string
  216                   | OPEN_PAREN_tok expression CLOSE_PAREN_tok

  217 argument_expression_list: assignment_expression
  218                         | argument_expression_list COMMA_tok assignment_expression

  219 constant: INTEGER_CONSTANT_tok
  220         | CHARACTER_CONSTANT_tok
  221         | FLOATING_CONSTANT_tok
  222         | ENUMERATION_CONSTANT_tok

  223 string: STRING_LITERAL_tok

  224 identifier: ID_tok


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO_tok (258) 26
BREAK_tok (259) 142
CASE_tok (260) 116
CHAR_tok (261) 32
CONST_tok (262) 43
CONTINUE_tok (263) 141
DEFAULT_tok (264) 117
DO_tok (265) 130
DOUBLE_tok (266) 37
ELSE_tok (267) 127
ENUM_tok (268) 41
EXTERN_tok (269) 29
FLOAT_tok (270) 36
FOR_tok (271) 131 132 133 134 135 136 137 138
GOTO_tok (272) 140
IF_tok (273) 126 127
INT_tok (274) 34
LONG_tok (275) 35
REGISTER_tok (276) 27
RETURN_tok (277) 143 144
SHORT_tok (278) 33
SIGNED_tok (279) 38
SIZEOF_tok (280) 197 198
STATIC_tok (281) 28
STRUCT_tok (282) 48
SWITCH_tok (283) 128
TYPEDEF_tok (284) 30
UNION_tok (285) 49
UNSIGNED_tok (286) 39
VOID_tok (287) 31
VOLATILE_tok (288) 44
WHILE_tok (289) 129 130
ERROR_tok (290)
ID_tok (291) 224
PLUS_tok (292) 185 201
MINUS_tok (293) 186 202
STAR_tok (294) 75 76 77 78 188 200
SEMI_tok (295) 14 15 56 118 119 130 131 132 133 134 135 136 137 138
    140 141 142 143 144
OPEN_BRACKET_tok (296) 70 71 101 102 103 104 206
CLOSE_BRACKET_tok (297) 70 71 101 102 103 104 206
EQUAL_tok (298) 55 149
COLON_tok (299) 64 65 115 116 117 161
COMMA_tok (300) 53 62 82 84 89 92 94 146 218
OPEN_PAREN_tok (301) 69 72 73 74 100 105 106 107 108 126 127 128 129
    130 131 132 133 134 135 136 137 138 192 198 207 208 216
CLOSE_PAREN_tok (302) 69 72 73 74 100 105 106 107 108 126 127 128 129
    130 131 132 133 134 135 136 137 138 192 198 207 208 216
OPEN_BRACE_tok (303) 45 46 91 92 120 121 122 123
CLOSE_BRACE_tok (304) 45 46 91 92 120 121 122 123
QUESTION_MARK_tok (305) 161
BAR_tok (306) 168
CARET_tok (307) 170
AMP_tok (308) 172 199
GT_tok (309) 178
LT_tok (310) 177
PERCENT_tok (311) 190
TILDA_tok (312) 203
NOT_tok (313) 204
INC_OP_tok (314) 194 211
DEC_OP_tok (315) 195 212
INTEGER_CONSTANT_tok (316) 219
FLOATING_CONSTANT_tok (317) 221
CHARACTER_CONSTANT_tok (318) 220
ENUMERATION_CONSTANT_tok (319) 222
STRING_LITERAL_tok (320) 223
PTR_OP_tok (321) 210
LEFT_OP_tok (322) 182
RIGHT_OP_tok (323) 183
LE_OP_tok (324) 179
GE_OP_tok (325) 180
EQ_OP_tok (326) 174
NE_OP_tok (327) 175
AND_OP_tok (328) 166
OR_OP_tok (329) 164
MULT_ASSIGN_tok (330) 150
DIV_ASSIGN_tok (331) 151
MOD_ASSIGN_tok (332) 152
ADD_ASSIGN_tok (333) 153
SUB_ASSIGN_tok (334) 154
LEFT_ASSIGN_tok (335) 155
RIGHT_ASSIGN_tok (336) 156
AND_ASSIGN_tok (337) 157
XOR_ASSIGN_tok (338) 158
OR_ASSIGN_tok (339) 159
TYPEDEF_NAME_tok (340) 42
ELIPSIS_tok (341) 82
DIV_tok (342) 189
PERIOD_tok (343) 209
THEN (344)


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
translation_unit (91)
    on left: 2 4, on right: 0 4
$@1 (92)
    on left: 1, on right: 2
$@2 (93)
    on left: 3, on right: 4
external_declaration (94)
    on left: 6 7, on right: 2 4
$@3 (95)
    on left: 5, on right: 6
function_definition (96)
    on left: 8 10 11 13, on right: 6
$@4 (97)
    on left: 9, on right: 10
$@5 (98)
    on left: 12, on right: 13
declaration (99)
    on left: 14 15, on right: 7 17 19
declaration_list (100)
    on left: 17 19, on right: 10 13 19 122 123
$@6 (101)
    on left: 16, on right: 17
$@7 (102)
    on left: 18, on right: 19
declaration_specifiers (103)
    on left: 20 21 22 23 24 25, on right: 11 13 14 15 21 23 25 85 86
    87
storage_class_specifier (104)
    on left: 26 27 28 29 30, on right: 20 21
type_specifier (105)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42, on right: 22 23 57
    58
type_qualifier (106)
    on left: 43 44, on right: 24 25 59 60 79 80
struct_or_union_specifier (107)
    on left: 45 46 47, on right: 40
struct_or_union (108)
    on left: 48 49, on right: 45 46 47
struct_declaration_list (109)
    on left: 50 51, on right: 45 46 51
init_declarator_list (110)
    on left: 52 53, on right: 15 53
init_declarator (111)
    on left: 54 55, on right: 52 53
struct_declaration (112)
    on left: 56, on right: 50 51
specifier_qualifier_list (113)
    on left: 57 58 59 60, on right: 56 58 60 95 96
struct_declarator_list (114)
    on left: 61 62, on right: 56 62
struct_declarator (115)
    on left: 63 64 65, on right: 61 62
declarator (116)
    on left: 66 67, on right: 8 10 11 13 54 55 63 65 69 85
direct_declarator (117)
    on left: 68 69 70 71 72 73 74, on right: 66 67 70 71 72 73 74
pointer (118)
    on left: 75 76 77 78, on right: 67 77 78 97 99
type_qualifier_list (119)
    on left: 79 80, on right: 76 78 80
parameter_type_list (120)
    on left: 81 82, on right: 73 106 108
parameter_list (121)
    on left: 83 84, on right: 81 82 84
parameter_declaration (122)
    on left: 85 86 87, on right: 83 84
identifier_list (123)
    on left: 88 89, on right: 74 89
initializer (124)
    on left: 90 91 92, on right: 55 93 94
initializer_list (125)
    on left: 93 94, on right: 91 92 94
type_name (126)
    on left: 95 96, on right: 192 198
abstract_declarator (127)
    on left: 97 98 99, on right: 87 96 100
direct_abstract_declarator (128)
    on left: 100 101 102 103 104 105 106 107 108, on right: 98 99 103
    104 107 108
statement (129)
    on left: 109 110 111 112 113 114, on right: 115 116 117 124 125
    126 127 128 129 130 131 132 133 134 135 136 137 138
labeled_statement (130)
    on left: 115 116 117, on right: 109
expression_statement (131)
    on left: 118 119, on right: 111
compound_statement (132)
    on left: 120 121 122 123, on right: 8 10 11 13 110
statement_list (133)
    on left: 124 125, on right: 121 123 125
selection_statement (134)
    on left: 126 127 128, on right: 112
iteration_statement (135)
    on left: 129 130 131 132 133 134 135 136 137 138, on right: 113
jump_statement (136)
    on left: 140 141 142 143 144, on right: 114
@8 (137)
    on left: 139, on right: 140
expression (138)
    on left: 145 146, on right: 119 126 127 128 129 130 132 133 134
    135 136 137 138 144 146 161 206 216
assignment_expression (139)
    on left: 147 148, on right: 90 145 146 148 217 218
assignment_operator (140)
    on left: 149 150 151 152 153 154 155 156 157 158 159, on right:
    148
conditional_expression (141)
    on left: 160 161, on right: 147 161 162
constant_expression (142)
    on left: 162, on right: 64 65 71 102 104 116
logical_or_expression (143)
    on left: 163 164, on right: 160 161 164
logical_and_expression (144)
    on left: 165 166, on right: 163 164 166
inclusive_or_expression (145)
    on left: 167 168, on right: 165 166 168
exclusive_or_expression (146)
    on left: 169 170, on right: 167 168 170
and_expression (147)
    on left: 171 172, on right: 169 170 172
equality_expression (148)
    on left: 173 174 175, on right: 171 172 174 175
relational_expression (149)
    on left: 176 177 178 179 180, on right: 173 174 175 177 178 179
    180
shift_expression (150)
    on left: 181 182 183, on right: 176 177 178 179 180 182 183
additive_expression (151)
    on left: 184 185 186, on right: 181 182 183 185 186
multiplicative_expression (152)
    on left: 187 188 189 190, on right: 184 185 186 188 189 190
cast_expression (153)
    on left: 191 192, on right: 187 188 189 190 192 196
unary_expression (154)
    on left: 193 194 195 196 197 198, on right: 148 191 194 195 197
unary_operator (155)
    on left: 199 200 201 202 203 204, on right: 196
postfix_expression (156)
    on left: 205 206 207 208 209 210 211 212, on right: 193 206 207
    208 209 210 211 212
primary_expression (157)
    on left: 213 214 215 216, on right: 205
argument_expression_list (158)
    on left: 217 218, on right: 208 218
constant (159)
    on left: 219 220 221 222, on right: 214
string (160)
    on left: 223, on right: 215
identifier (161)
    on left: 224, on right: 45 47 68 88 89 115 140 209 210 213


State 0

    0 $accept: . translation_unit $end

    $default  reduce using rule 1 ($@1)

    translation_unit  go to state 1
    $@1               go to state 2


State 1

    0 $accept: translation_unit . $end
    4 translation_unit: translation_unit . $@2 external_declaration

    $end  shift, and go to state 3

    $default  reduce using rule 3 ($@2)

    $@2  go to state 4


State 2

    2 translation_unit: $@1 . external_declaration

    AUTO_tok          shift, and go to state 5
    CHAR_tok          shift, and go to state 6
    CONST_tok         shift, and go to state 7
    DOUBLE_tok        shift, and go to state 8
    ENUM_tok          shift, and go to state 9
    EXTERN_tok        shift, and go to state 10
    FLOAT_tok         shift, and go to state 11
    INT_tok           shift, and go to state 12
    LONG_tok          shift, and go to state 13
    REGISTER_tok      shift, and go to state 14
    SHORT_tok         shift, and go to state 15
    SIGNED_tok        shift, and go to state 16
    STATIC_tok        shift, and go to state 17
    STRUCT_tok        shift, and go to state 18
    TYPEDEF_tok       shift, and go to state 19
    UNION_tok         shift, and go to state 20
    UNSIGNED_tok      shift, and go to state 21
    VOID_tok          shift, and go to state 22
    VOLATILE_tok      shift, and go to state 23
    TYPEDEF_NAME_tok  shift, and go to state 24

    AUTO_tok          [reduce using rule 5 ($@3)]
    CHAR_tok          [reduce using rule 5 ($@3)]
    CONST_tok         [reduce using rule 5 ($@3)]
    DOUBLE_tok        [reduce using rule 5 ($@3)]
    ENUM_tok          [reduce using rule 5 ($@3)]
    EXTERN_tok        [reduce using rule 5 ($@3)]
    FLOAT_tok         [reduce using rule 5 ($@3)]
    INT_tok           [reduce using rule 5 ($@3)]
    LONG_tok          [reduce using rule 5 ($@3)]
    REGISTER_tok      [reduce using rule 5 ($@3)]
    SHORT_tok         [reduce using rule 5 ($@3)]
    SIGNED_tok        [reduce using rule 5 ($@3)]
    STATIC_tok        [reduce using rule 5 ($@3)]
    STRUCT_tok        [reduce using rule 5 ($@3)]
    TYPEDEF_tok       [reduce using rule 5 ($@3)]
    UNION_tok         [reduce using rule 5 ($@3)]
    UNSIGNED_tok      [reduce using rule 5 ($@3)]
    VOID_tok          [reduce using rule 5 ($@3)]
    VOLATILE_tok      [reduce using rule 5 ($@3)]
    TYPEDEF_NAME_tok  [reduce using rule 5 ($@3)]
    $default          reduce using rule 5 ($@3)

    external_declaration       go to state 25
    $@3                        go to state 26
    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33


State 3

    0 $accept: translation_unit $end .

    $default  accept


State 4

    4 translation_unit: translation_unit $@2 . external_declaration

    AUTO_tok          shift, and go to state 5
    CHAR_tok          shift, and go to state 6
    CONST_tok         shift, and go to state 7
    DOUBLE_tok        shift, and go to state 8
    ENUM_tok          shift, and go to state 9
    EXTERN_tok        shift, and go to state 10
    FLOAT_tok         shift, and go to state 11
    INT_tok           shift, and go to state 12
    LONG_tok          shift, and go to state 13
    REGISTER_tok      shift, and go to state 14
    SHORT_tok         shift, and go to state 15
    SIGNED_tok        shift, and go to state 16
    STATIC_tok        shift, and go to state 17
    STRUCT_tok        shift, and go to state 18
    TYPEDEF_tok       shift, and go to state 19
    UNION_tok         shift, and go to state 20
    UNSIGNED_tok      shift, and go to state 21
    VOID_tok          shift, and go to state 22
    VOLATILE_tok      shift, and go to state 23
    TYPEDEF_NAME_tok  shift, and go to state 24

    AUTO_tok          [reduce using rule 5 ($@3)]
    CHAR_tok          [reduce using rule 5 ($@3)]
    CONST_tok         [reduce using rule 5 ($@3)]
    DOUBLE_tok        [reduce using rule 5 ($@3)]
    ENUM_tok          [reduce using rule 5 ($@3)]
    EXTERN_tok        [reduce using rule 5 ($@3)]
    FLOAT_tok         [reduce using rule 5 ($@3)]
    INT_tok           [reduce using rule 5 ($@3)]
    LONG_tok          [reduce using rule 5 ($@3)]
    REGISTER_tok      [reduce using rule 5 ($@3)]
    SHORT_tok         [reduce using rule 5 ($@3)]
    SIGNED_tok        [reduce using rule 5 ($@3)]
    STATIC_tok        [reduce using rule 5 ($@3)]
    STRUCT_tok        [reduce using rule 5 ($@3)]
    TYPEDEF_tok       [reduce using rule 5 ($@3)]
    UNION_tok         [reduce using rule 5 ($@3)]
    UNSIGNED_tok      [reduce using rule 5 ($@3)]
    VOID_tok          [reduce using rule 5 ($@3)]
    VOLATILE_tok      [reduce using rule 5 ($@3)]
    TYPEDEF_NAME_tok  [reduce using rule 5 ($@3)]
    $default          reduce using rule 5 ($@3)

    external_declaration       go to state 34
    $@3                        go to state 26
    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33


State 5

   26 storage_class_specifier: AUTO_tok .

    $default  reduce using rule 26 (storage_class_specifier)


State 6

   32 type_specifier: CHAR_tok .

    $default  reduce using rule 32 (type_specifier)


State 7

   43 type_qualifier: CONST_tok .

    $default  reduce using rule 43 (type_qualifier)


State 8

   37 type_specifier: DOUBLE_tok .

    $default  reduce using rule 37 (type_specifier)


State 9

   41 type_specifier: ENUM_tok .

    $default  reduce using rule 41 (type_specifier)


State 10

   29 storage_class_specifier: EXTERN_tok .

    $default  reduce using rule 29 (storage_class_specifier)


State 11

   36 type_specifier: FLOAT_tok .

    $default  reduce using rule 36 (type_specifier)


State 12

   34 type_specifier: INT_tok .

    $default  reduce using rule 34 (type_specifier)


State 13

   35 type_specifier: LONG_tok .

    $default  reduce using rule 35 (type_specifier)


State 14

   27 storage_class_specifier: REGISTER_tok .

    $default  reduce using rule 27 (storage_class_specifier)


State 15

   33 type_specifier: SHORT_tok .

    $default  reduce using rule 33 (type_specifier)


State 16

   38 type_specifier: SIGNED_tok .

    $default  reduce using rule 38 (type_specifier)


State 17

   28 storage_class_specifier: STATIC_tok .

    $default  reduce using rule 28 (storage_class_specifier)


State 18

   48 struct_or_union: STRUCT_tok .

    $default  reduce using rule 48 (struct_or_union)


State 19

   30 storage_class_specifier: TYPEDEF_tok .

    $default  reduce using rule 30 (storage_class_specifier)


State 20

   49 struct_or_union: UNION_tok .

    $default  reduce using rule 49 (struct_or_union)


State 21

   39 type_specifier: UNSIGNED_tok .

    $default  reduce using rule 39 (type_specifier)


State 22

   31 type_specifier: VOID_tok .

    $default  reduce using rule 31 (type_specifier)


State 23

   44 type_qualifier: VOLATILE_tok .

    $default  reduce using rule 44 (type_qualifier)


State 24

   42 type_specifier: TYPEDEF_NAME_tok .

    $default  reduce using rule 42 (type_specifier)


State 25

    2 translation_unit: $@1 external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 26

    6 external_declaration: $@3 . function_definition

    AUTO_tok          shift, and go to state 5
    CHAR_tok          shift, and go to state 6
    CONST_tok         shift, and go to state 7
    DOUBLE_tok        shift, and go to state 8
    ENUM_tok          shift, and go to state 9
    EXTERN_tok        shift, and go to state 10
    FLOAT_tok         shift, and go to state 11
    INT_tok           shift, and go to state 12
    LONG_tok          shift, and go to state 13
    REGISTER_tok      shift, and go to state 14
    SHORT_tok         shift, and go to state 15
    SIGNED_tok        shift, and go to state 16
    STATIC_tok        shift, and go to state 17
    STRUCT_tok        shift, and go to state 18
    TYPEDEF_tok       shift, and go to state 19
    UNION_tok         shift, and go to state 20
    UNSIGNED_tok      shift, and go to state 21
    VOID_tok          shift, and go to state 22
    VOLATILE_tok      shift, and go to state 23
    ID_tok            shift, and go to state 35
    STAR_tok          shift, and go to state 36
    OPEN_PAREN_tok    shift, and go to state 37
    TYPEDEF_NAME_tok  shift, and go to state 24

    function_definition        go to state 38
    declaration_specifiers     go to state 39
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    declarator                 go to state 40
    direct_declarator          go to state 41
    pointer                    go to state 42
    identifier                 go to state 43


State 27

    7 external_declaration: declaration .

    $default  reduce using rule 7 (external_declaration)


State 28

   14 declaration: declaration_specifiers . SEMI_tok
   15            | declaration_specifiers . init_declarator_list SEMI_tok

    ID_tok          shift, and go to state 35
    STAR_tok        shift, and go to state 36
    SEMI_tok        shift, and go to state 44
    OPEN_PAREN_tok  shift, and go to state 37

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 41
    pointer               go to state 42
    identifier            go to state 43


State 29

   20 declaration_specifiers: storage_class_specifier .
   21                       | storage_class_specifier . declaration_specifiers

    AUTO_tok          shift, and go to state 5
    CHAR_tok          shift, and go to state 6
    CONST_tok         shift, and go to state 7
    DOUBLE_tok        shift, and go to state 8
    ENUM_tok          shift, and go to state 9
    EXTERN_tok        shift, and go to state 10
    FLOAT_tok         shift, and go to state 11
    INT_tok           shift, and go to state 12
    LONG_tok          shift, and go to state 13
    REGISTER_tok      shift, and go to state 14
    SHORT_tok         shift, and go to state 15
    SIGNED_tok        shift, and go to state 16
    STATIC_tok        shift, and go to state 17
    STRUCT_tok        shift, and go to state 18
    TYPEDEF_tok       shift, and go to state 19
    UNION_tok         shift, and go to state 20
    UNSIGNED_tok      shift, and go to state 21
    VOID_tok          shift, and go to state 22
    VOLATILE_tok      shift, and go to state 23
    TYPEDEF_NAME_tok  shift, and go to state 24

    $default  reduce using rule 20 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33


State 30

   22 declaration_specifiers: type_specifier .
   23                       | type_specifier . declaration_specifiers

    AUTO_tok          shift, and go to state 5
    CHAR_tok          shift, and go to state 6
    CONST_tok         shift, and go to state 7
    DOUBLE_tok        shift, and go to state 8
    ENUM_tok          shift, and go to state 9
    EXTERN_tok        shift, and go to state 10
    FLOAT_tok         shift, and go to state 11
    INT_tok           shift, and go to state 12
    LONG_tok          shift, and go to state 13
    REGISTER_tok      shift, and go to state 14
    SHORT_tok         shift, and go to state 15
    SIGNED_tok        shift, and go to state 16
    STATIC_tok        shift, and go to state 17
    STRUCT_tok        shift, and go to state 18
    TYPEDEF_tok       shift, and go to state 19
    UNION_tok         shift, and go to state 20
    UNSIGNED_tok      shift, and go to state 21
    VOID_tok          shift, and go to state 22
    VOLATILE_tok      shift, and go to state 23
    TYPEDEF_NAME_tok  shift, and go to state 24

    $default  reduce using rule 22 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33


State 31

   24 declaration_specifiers: type_qualifier .
   25                       | type_qualifier . declaration_specifiers
